<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_sip_calculator"
            android:icon="@drawable/icon_sip"
            android:title="@string/sip_calculator" />
        <item
            android:id="@+id/nav_sip_planner"
            android:icon="@drawable/icon_sip_planner"
            android:title="@string/sip_planner" />
        <item
            android:id="@+id/nav_swp_calculator"
            android:icon="@drawable/icon_swp"
            android:title="@string/swp_calculator" />
        <item
            android:id="@+id/nav_stp_calculator"
            android:icon="@drawable/icon_stp"
            android:title="@string/stp_calculator" />
        <item
            android:id="@+id/nav_add_plan"
            android:icon="@drawable/icon_add_investment"
            android:title="@string/add_new_investment_plan" />
        <item
            android:id="@+id/nav_view_plan"
            android:icon="@drawable/icon_view_plan"
            android:title="@string/view_my_plan" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_privacy_police"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_border"
                android:title="@string/rate_us" />
        </menu>
    </item>
</menu>