<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:text="@string/we_hope_you_liked_our_app_please_rate_our_app"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/native_ad_bkg">

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/native_banner_ad_container"
            android:layout_width="fill_parent"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="6dp" />

        <TextView
            android:id="@+id/textAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/advertisement" />
    </RelativeLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:numStars="5"
        android:rating="0.0"
        android:stepSize="1.0" />

    <TextView
        android:id="@+id/tvRatingScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"

        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp"
        android:gravity="end|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="end|center"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/send_feedback"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>