<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.2">

        <androidx.core.widget.NestedScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/native_banner"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="22dp"
                    android:layout_weight="1.35"
                    android:orientation="vertical">

                    <com.facebook.ads.NativeAdLayout
                        android:id="@+id/native_banner_ad_container"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@drawable/ads_border"
                        android:padding="6dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.0"
                        android:padding="6dp"
                        android:text="@string/initial_investment_amount"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/swpInvestment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:inputType="number"
                        android:padding="6dp"

                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.0"
                        android:padding="6dp"
                        android:text="@string/swp_amount"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/swpAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:inputType="number"
                        android:padding="6dp"

                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.0"
                        android:padding="6dp"
                        android:text="@string/rate_of_return"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/swpRateReturn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:inputType="numberDecimal"
                        android:padding="6dp"

                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="@string/duration"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/swpTunure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:entries="@array/tunnerarray"
                        android:padding="6dp" />

                    <EditText
                        android:id="@+id/swpDuration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:inputType="number"
                        android:padding="6dp"

                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.0"
                        android:padding="6dp"
                        android:text="@string/frequency"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/fequancy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:entries="@array/fequancyarray"
                        android:padding="6dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:padding="6dp">

                    <TextView
                        android:id="@+id/calcSwp"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/btnback"
                        android:gravity="center"
                        android:text="@string/calculate"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/restSwp"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/btnback"
                        android:gravity="center"
                        android:text="@string/reset"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/detail"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/btnback"
                        android:gravity="center"
                        android:text="@string/detail"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:weightSum="2.0">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="@string/total_withdrawal"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/widro"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="00.00"
                        android:textColor="@color/text_blue"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:weightSum="2.0">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="@string/total_profit"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/profit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="00.00"
                        android:textColor="@color/text_blue"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:weightSum="2.0">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="@string/end_balance"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/endblance"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="00.00"
                        android:textColor="@color/text_blue"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:weightSum="2.0">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="@string/no_of_withdrawals"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/noOFWidro"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:padding="6dp"
                        android:text="00.00"
                        android:textColor="@color/text_blue"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1.8"
        android:background="@drawable/banner_ad_bkg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="2dp" />
</LinearLayout>